--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Code Quiz</title>
-    
+
 </head>
+
 <body>
-    
+
+    <div id="Highscores">
+
+        <a href="View Highscores">View Highscores</a>
+
+
+
+        <p >Time: <span id="countdownTimer"></span></p>
+
+
+    </div>
+
+    <section id="start-view">
+
+        <h1>Code Quiz Challenge</h1>
+
+        <p id="Intro">Let's see how many questions you can get right in this JavaScript Quiz!</p>
+
+        <button id="start-button">Start Quiz</button>
+
+
+    </section>
+
+
+    <!-- Question View -->
+    <section id="question-view" style="display:none;">
+
+       <h2 id="question"></h2>
+       <div class="answers"></div>
+
+    </section>
+
+    <!-- End View -->
+    <section id="end-view" style="display:none;">
+
+        Quiz Over
+    </section>
+
+
+    <script src="/app.js"></script>
+
+
 </body>
+
 </html>
